--- a/LibrasDetection/processamento.ipynb
+++ b/LibrasDetection/processamento.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
     "\n",
     "# Parâmetros globais\n",
     "num_frames = 30\n",
-    "altura, largura, canais = 64, 64, 1  # 1 para escala de cinza\n",
+    "altura, largura, canais = 64, 64, 1\n",
     "\n",
     "# Dicionário de classes\n",
     "label_dict = {label_dir: idx for idx, label_dir in enumerate(os.listdir(dataset_path))}\n",
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,6 +54,7 @@
     "    frames = []\n",
     "    success, frame = cap.read()\n",
     "    \n",
+    "    # Loop para leitura dos frames\n",
     "    while success:\n",
     "        gray_frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "        resized_frame = cv2.resize(gray_frame, (largura, altura))\n",
@@ -62,10 +63,11 @@
     "    \n",
     "    cap.release()\n",
     "    \n",
-    "    if len(frames) > target_frames:\n",
+    "    # Normalizaação do número de frames ( padding ou truncamento )\n",
+    "    if len(frames) > target_frames: # Truncamento\n",
     "        indices = np.linspace(0, len(frames) - 1, target_frames).astype(int)\n",
     "        frames = [frames[i] for i in indices]\n",
-    "    elif len(frames) < target_frames:\n",
+    "    elif len(frames) < target_frames: # Padding\n",
     "        padding = target_frames - len(frames)\n",
     "        frames.extend([frames[-1]] * padding)\n",
     "    \n",
@@ -74,12 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Carregar os dados\n",
+    "# Listas para armazenar os dados e labels\n",
     "data, labels = [], []\n",
+    "\n",
+    "# Carregar os dados\n",
     "for label_dir in os.listdir(dataset_path):\n",
     "    class_path = os.path.join(dataset_path, label_dir)\n",
     "    if os.path.isdir(class_path):\n",
@@ -95,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
